[skip ci] fix tooltip alignment and add border color

--- a/app/assets/stylesheets/framework/lists.scss
+++ b/app/assets/stylesheets/framework/lists.scss
@@ -257,11 +257,11 @@ ul.controls {
 
     .author_link {
       display: inline-block;
-      vertical-align: middle;
 
       .avatar-inline {
         margin-left: 0;
         margin-right: 0;
+        margin-bottom: 0;
       }
     }
   }
